PA_Education/TestMenifest/force-app/main/default/objects/EformsignDocument__c/EformsignDocument__c.object-meta.xml
<CustomObject>
    <description>이폼사인 문서 - 템플릿을 통해 생성(발송)된 문서</description>
    <label>eformsign Document</label>
    <nameField>
        <label>eformsign Document Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>