PA_Education/TestMenifest/force-app/main/default/objects/EformsignDocument__c/fields/DocumentCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>DocumentCurrentStatus__c</fullName>
    <label>문서 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>false</fullName>
            </value>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>