PA_Education/TestMenifest/force-app/main/default/objects/EformsignDocument__c/fields/EformsignTemplate__c.field-meta.xml
<CustomField>
    <fullName>EformsignTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>이폼사인 템플릿</label>
    <referenceTo>EformsignTemplate__c</referenceTo>
    <relationshipLabel>eformsign Document</relationshipLabel>
    <relationshipName>eformsign_Document</relationshipName>
    <type>Lookup</type>
</CustomField>