PA_Education/TestMenifest/force-app/main/default/objects/EformsignDocument__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>대상 개체명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>