PA_Education/TestMenifest/force-app/main/default/objects/EformsignDocument__c/fields/TargetRecordURL__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordURL__c</fullName>
    <label>대상 레코드URL</label>
    <type>Url</type>
</CustomField>